# meshlab-extra-plugins

./: .gitmodules  CMakeLists.txt  README.md  globalregistration.cpp
.github/workflows/: BuildMeshLabPlugins.yml  CreateRelease.yml  Linux.yml  MacOS.yml  Windows.yml
plugin_examples/filter_example/: CMakeLists.txt  filter_example.cpp  filter_example.h
plugin_examples/iomesh_example/: CMakeLists.txt  sampleio.cpp  sampleio.h
plugins/filter_csg/: author.txt  filter_csg.cpp  intercept.h
plugins/filter_globalregistration/: CMakeLists.txt  author.txt  globalregistration.cpp  globalregistration.h
plugins/filter_orientedbbox/: CMakeLists.txt  README.md  filter_orientedbbox.cpp  filter_orientedbbox.h  genetic.cpp  genetic.h  quick_hull.cpp  quick_hull.h  rotating_calipers.cpp  rotating_calipers.h  test_hybbrid.cpp
plugins/filter_poisson/: CMakeLists.txt  author.txt  filter_poisson.cpp  filter_poisson.h
plugins/filter_poisson/src/: Geometry.h  Geometry.inl  MultiGridOctreeData.h  MultiGridOctreeData.inl  Octree.h  Octree.inl  SparseMatrix.h  SparseMatrix.inl  Vector.inl
plugins/filter_virtualgoniometer/: CMakeLists.txt  author.txt  connectedComponent.h  knnGraph.h  virtual_goniometer.cpp  virtual_goniometer.h
scripts/Linux/: 0_setup_env.sh  1_build.sh
scripts/Windows/: 1_build.sh
scripts/macOS/: 0_setup_env.sh  1_build.sh
